[#28] Fix logo not showing

--- a/frontend/src/pages/welcome/welcome.scss
+++ b/frontend/src/pages/welcome/welcome.scss
@@ -1,7 +1,7 @@
 @import "../../variables.scss";
 
 #welcome {
-  .welcome-container {
+  &.welcome-container {
     background-image: url("/assets/images/bg-login.png") !important;
     min-height: 100vh;
 
